@@ -1,6 +1,13 @@
+3 March 2011: Matthijs:
+	- fix #bug352: fix hardcoded paths in manpages.
+
 2 March 2011: Matthijs:
 	- fix #bug354: make realclean cleans too much
 	- added make devclean for cleaning up autoconf and automake stuff
+	- Fix hardcoded paths in nsd.conf.sample and nsd.conf.5
+
+24 February 2011: Matthijs
+	- fix #bug350: refused notifies should log client ip.
 
 2 March 2011: Wouter
 	- Fix AXFR service with radix tree.
